# example-game

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.cmake/: cpm.cmake  output.cmake  platforms.cmake
projects/common/: CMakeLists.txt  packages.cmake  sources.cmake
projects/common/src/Support/: Env.cppm  Str.cppm
projects/launcher/: CMakeLists.txt  packages.cmake  platforms.cmake  sources.cmake
projects/launcher/src/: App.cppm  main.cpp
projects/launcher/src/UI/: LauncherFrame.cppm
projects/setup/: CMakeLists.txt  packages.cmake
projects/setup/src/Config/: Config.cppm
